feat: 고객 셀프서비스 백엔드 360 추가
